--- a/index.html
+++ b/index.html
@@ -24,23 +24,33 @@
 </head>
 
 <body style="background-color:#DCDCDC;">
-<nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand fs-3" href="#home">John Infant</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav ms-auto fs-5">
-        <li class="nav-item"><a class="nav-link text-white" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#education">Education</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#skills">Skills</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#contact">Contact</a></li>
-      </ul>
+  <nav class="navbar sticky-top navbar-expand-lg bg-dark navbar-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand fs-3" href="#home">John Infant</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ms-auto fs-5">
+          <li class="nav-item"><a class="nav-link text-white" href="#about" title="About Section"
+              onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">About</a>
+          </li>
+          <li class="nav-item"><a class="nav-link text-white" href="#education" title="Education Section"
+              onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">Education</a>
+          </li>
+          <li class="nav-item"><a class="nav-link text-white" href="#skills" title="Skills Section"
+              onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">Skills</a>
+          </li>
+          <li class="nav-item"><a class="nav-link text-white" href="#projects" title="Projects Section"
+              onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">Projects</a>
+          </li>
+          <li class="nav-item"><a class="nav-link text-white" href="#contact" title="Contact Section"
+              onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
   <div class="body-align">
     <section id="home" class=" d-flex align-items-center py-2">
@@ -84,7 +94,7 @@
       <div class="p-2 text-center">
         <div class="container py-2">
           <h1 class="text-body-emphasis about-head over" data-aos="slide-up">About Me</h1>
-          <p class="col-lg-12 mx-auto lead about-content fs-3" data-aos="zoom-in">
+          <p class="col-lg-12 mx-auto lead about-content fs-3" data-aos="fade-up">
             I am a highly organized and hardworking individual, eager to gain practical experience in the tech industry.
             I am seeking an opportunity with a company that offers challenges and supports both personal and
             professional growth.
@@ -105,8 +115,9 @@
           <!-- PG -->
           <div class="feature col" data-aos="zoom-in">
             <h3 class="fs-4 text-body-emphasis body-cont-head">Kalasalingam University</h3>
-            <h4 class="fs-5 text-body-emphasis body-cont">Master of Computer Applications</h4>
-            <p class="fs-6 body-cont">2024 – 2026</p>
+            <h4 class="fs-5 text-body-emphasis body-cont">Master of Computer Applications (Online)</h4>
+            <p class="fs-6 body-cont">2024 – 2026 <br />First Semester - CGPA: 8.21</p>
+
           </div>
 
           <!-- UG -->
@@ -145,7 +156,7 @@
                 <li class="list-group-item">Bootstrap</li>
                 <li class="list-group-item">JavaScript</li>
                 <li class="list-group-item">React JS</li>
-                <li class="list-group-item">jQuery</li>
+                <li class="list-group-item">JQuery</li>
               </ul>
             </div>
           </div>
@@ -171,6 +182,8 @@
               <ul class="fs-6 list-group" data-aos="zoom-in">
                 <li class="list-group-item">Netlify</li>
                 <li class="list-group-item">Render</li>
+                <li class="list-group-item">GoDaddy</li>
+                <li class="list-group-item">Hostinger</li>
                 <li class="list-group-item">MS Word</li>
                 <li class="list-group-item">MS Excel</li>
                 <li class="list-group-item">MS PowerPoint</li>
@@ -292,7 +305,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="https://www.instagram.com/john_infant__/" class="nav-link text-body-secondary" title="instagram">
+              <a href="https://www.instagram.com/john_infant__/" class="nav-link text-body-secondary" title="Instagram">
                 <img src="https://img.icons8.com/?size=100&id=Xy10Jcu1L2Su&format=png&color=000000" alt="instagram-new"
                   height="50" width="50" style="transition: transform 0.3s;"
                   onmouseover="this.style.transform='scale(1.2)'" onmouseout="this.style.transform='scale(1)'">
@@ -318,8 +331,8 @@
       once: false // animate every time it comes into view
     });
   </script>
-<!-- Bootstrap JS Bundle -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
